# morgan-bevy

./: .eslintrc.json  .gitignore  .markdownlint.json  .mcp.json  .prettierrc  CHANGELOG.md  INITIAL_PROMPT.md  LICENSE-APACHE  README.md  SECURITY.md  TODO.md  clippy.toml  index.html  package-lock.json  package.json  tailwind.config.js  theme_test_example.md  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
Assets/Materials/: README.md
Assets/Models/: README.md
Assets/Textures/: README.md
docs/: DEVELOPMENT_SUMMARY.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: assets.rs  main.rs  spatial.rs
src-tauri/src/assets/: database.rs  scanner.rs
src-tauri/src/export/: exporters.rs  formats.rs  mod.rs
src-tauri/src/generation/: bsp.rs  mod.rs  themes.rs  wfc.rs
src/components/: KeyboardShortcutsModal.tsx  Layers.tsx  MaterialEditor.tsx  MorganBevyIcon.tsx  PerformanceTestPanel.tsx  TransformConstraintIndicator.tsx
src/components/ActionsPanel/: ActionsPanel.tsx  index.ts
src/components/AssetBrowser/: AssetBrowser.tsx  index.ts
src/components/AssetsPanel/: AssetsPanel.tsx  index.ts
src/components/CollapsiblePanel/: CollapsiblePanel.tsx
src/components/ExportPanel/: ExportPanel.tsx  index.ts
src/components/FileMenu/: FileMenu.tsx
src/components/GenerationPanel/: GenerationPanel.tsx
src/components/GridView/: GridView.tsx  index.ts
src/components/Hierarchy/: Hierarchy.tsx
src/components/Inspector/: Inspector.tsx
src/components/PrefabManager/: PrefabManager.tsx
src/components/TransformGizmos/: TransformGizmos.tsx  index.ts
src/components/Viewport3D/: BoxSelection.tsx  CameraSystem.tsx  OptimizedScene.tsx  Scene.tsx  SelectableCube.tsx  TransformGizmos.tsx  Viewport3D.tsx
src/contexts/: CameraContext.tsx
src/hooks/: useAssetDatabase.ts  useBoxSelection.ts  useCameraControls.ts  useKeyboardShortcuts.ts  useResizablePanels.ts
src/performance/: FrustumCulling.tsx  InstancedRendering.tsx  LevelOfDetail.tsx  PerformanceManager.tsx  SelectionOptimization.tsx  index.ts
src/store/: editorStore.ts
src/test/: setup.ts
src/test/components/: MaterialEditor.test.tsx
src/test/store/: editorStore.test.ts
src/test/utils/: utilities.test.ts
src/types/: assetDatabase.ts
src/utils/: clipboard.ts  commands.ts  transformConstraints.ts
