[package]
name = "morgan-bevy"
version = "0.3.5"
description = "Visual 3D Level Editor & Procedural Generator for Bevy"
authors = ["Nick Campbell <s0ma@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/greysquirr3l/morgan-bevy"
edition = "2021"

# Tauri specific configuration
[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Asset management
rfd = "0.14"
md5 = "0.7"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
sha2 = "0.10"  # For asset fingerprinting
rayon = "1.8"  # For parallel asset scanning

# BSP and procedural generation
petgraph = "0.6"
noise = "0.8"

# Spatial data structures for 3D operations
kdtree = "0.6"
rstar = "0.11"

# File I/O and serialization
ron = "0.8"
toml = "0.8"
csv = "1.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Performance and math
nalgebra = "0.32"
glam = "0.24"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
